--- a/public/blog.html
+++ b/public/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width", initial-scale="1.0" />
-    <title>企業情 | NextLinks</title>
+    <title>企業情報 | NextLinks</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -43,4 +43,5 @@
 
 </body>
 </html>
+
 
