テストデプロイ

--- a/public/index.html
+++ b/public/index.html
@@ -1,120 +1,89 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NextLinks | ネクスト</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <header>
-        <h1 class="logo"><a href="index.html">NextLinks</a></h1>
-        <button id="theme-toggle">🌙</button>
-        <nav>
-            <ul>
-                <li><a href="index.html">トップ</a></li>
-                <li><a href="company.html">企業情報</a></li>
-                <li><a href="services.html">事業内容</a></li>
-                <li><a href="works.html">実績</a></li>
-                <li><a href="blog.html">ブログ</a></li>
-                <li><a href="recruit.html">採用情報</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
-            </ul>
-        </nav>
-    </header>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome to Firebase Hosting</title>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h2>ITの力で、未来にリンクを。</h2>
-            <p>信頼と技術で、つながる社会を。</p>
-        </div>
-    </section>
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/11.8.1/firebase-app-compat.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/11.8.1/firebase-auth-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-database-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-firestore-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-functions-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-messaging-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-storage-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-analytics-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-remote-config-compat.js"></script>
+    <script defer src="/__/firebase/11.8.1/firebase-performance-compat.js"></script>
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <section class="scroll-anim">
-        <h2>事業内容</h2>
-        <p>私たちはWeb制作とITコンサルティングを行っています。</p>
-    </section>
-    
-    <section class="service">
-        <h2>事業内容</h2>
-        <div class="service-list">
-            <div class="service">
-                <h3>Web制作</h3>
-                <p>ホームページやLPの設計・開発を行います。</p>
-            </div>
-            <div class="service">
-                <h3>ITコンサル</h3>
-                <p>業務用アプリケーションをオーダーメイドで開発。</p>
-            </div>
-        </div>
-    </section>
+    <style media="screen">
+      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
+      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
+      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
+      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
+      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
+      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
+      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
+      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
+      @media (max-width: 600px) {
+        body, #message { margin-top: 0; background: white; box-shadow: none; }
+        body { border-top: 16px solid #ffa100; }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="message">
+      <h2>Welcome</h2>
+      <h1>Firebase Hosting Setup Complete</h1>
+      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
+      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    </div>
+    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    <section class="news">
-        <h2>お知らせ</h2>
-        <ul>
-            <li>2025.05.24:架空企業サイトを立ち上げました</li>
-            <li>2025.04.01:新卒採用を開始しました</li>
-        </ul>
-    </section>
-
-    <section class="recruit">
-        <a href="#">一緒に、次の時代を創ろう →</a>
-    </section>
-    <footer>
-        <p>© 2025 NextLinks Inc. All Rights Reserved.</p>
-    </footer>
-
-    <!-- bodyの最後に入れる -->
     <script>
-    const faders = document.querySelectorAll('.work-card, .service');
+      document.addEventListener('DOMContentLoaded', function() {
+        const loadEl = document.querySelector('#load');
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        // // The Firebase SDK is initialized and available here!
+        //
+        // firebase.auth().onAuthStateChanged(user => { });
+        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+        // firebase.firestore().doc('/foo/bar').get().then(() => { });
+        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
+        // firebase.messaging().requestPermission().then(() => { });
+        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+        // firebase.analytics(); // call to activate
+        // firebase.analytics().logEvent('tutorial_completed');
+        // firebase.performance(); // call to activate
+        //
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-    const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-        if (entry.isIntersecting) {
-            entry.target.classList.add('fade-in');
+        try {
+          let app = firebase.app();
+          let features = [
+            'auth', 
+            'database', 
+            'firestore',
+            'functions',
+            'messaging', 
+            'storage', 
+            'analytics', 
+            'remoteConfig',
+            'performance',
+          ].filter(feature => typeof app[feature] === 'function');
+          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+        } catch (e) {
+          console.error(e);
+          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
-        });
-    }, {
-        threshold: 0.1,
-    });
-
-    faders.forEach(fader => {
-        fader.classList.add('fade-init');
-        observer.observe(fader);
-    });
+      });
     </script>
-
-    <script>
-    const btn = document.getElementById('theme-toggle');
-    const body = document.body;
-
-    // 初期テーマ
-    body.classList.add('light');
-
-    btn.addEventListener('click', () => {
-        body.classList.toggle('light');
-        body.classList.toggle('dark');
-    });
-    </script>
-
-    <script>
-        const animElems = document.querySelectorAll('.scroll-anim');
-
-        const animObserver = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.classList.add('visible');
-                // 一度表示されたら監視を外す（パフォーマンス向上）
-                animObserver.unobserve(entry.target);
-            }
-            });
-        }, { threshold: 0.1 });
-
-        animElems.forEach(el => {
-            animObserver.observe(el);
-        });
-    </script>
-
-
-</body>
+  </body>
 </html>
